manifest/observability/monitoring/victoriametrics/vmagent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vmagent
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: ops-pro.kubeop.com
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: vmagent
              port:
                number: 8429
  tls:
  - hosts:
    - ops-pro.kubeop.com
    secretName: kubeop.com-ssl
